--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -56,7 +56,7 @@
       <div class="container">
         <input type="text" id="url" class="form-control" />
         <div id="passwordHelpBlock" class="form-text">
-          The magic is about to happen. <%-userData.sub%>
+          The magic is about to happen.
         </div>
         <h3
           class="form-group text-danger p-4"
