--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -124,8 +124,8 @@
     const dupError = document.getElementById("dupError");
     const success = document.getElementById("success");
     const urls_container = document.getElementById("urls_container");
-    const api_shorten_url = `http://localhost:3000/api/v1/shorten-url`;
-    const api_getAll_urls = `http://localhost:3000/api/v1/getallurls`;
+    const api_shorten_url = `https://urls4.herokuapp.com/api/v1/shorten-url`;
+    const api_getAll_urls = `https://urls4.herokuapp.com/api/v1/getallurls`;
 
     const showLoginError = async () => {
       loginError.style.display = "block";
