--- a/views/all-urls.ejs
+++ b/views/all-urls.ejs
@@ -71,7 +71,7 @@
   <script>
     const token = "<%-userData.sub%>";
     const urls_container = document.getElementById("urls_container");
-    const api_getAll_urls = `http://localhost:3000/api/v1/getallurls`;
+    const api_getAll_urls = `https://urls4.herokuapp.com/api/v1/getallurls`;
 
     const showAllUrls = async () => {
       const urls = await getAllUrls();
