--- a/views/admin/viewAllUsersPage.ejs
+++ b/views/admin/viewAllUsersPage.ejs
@@ -26,6 +26,14 @@ margin-left: auto;
 margin-right: auto;
 margin-top: 6px;
 }
+.del-icon{
+  color: red;
+  width: 60px;
+}
+
+.del-icon:hover{
+transform: scale(1.2);
+}
 .user-box:hover{
   transform: scale(1.2);
 }
@@ -92,11 +100,17 @@ margin-top: 6px;
       const urls = await getAllUsers();
       const recentUrlsHTML = urls.map((item) => {
         const HTML = `
-        <div class="user-box">
-          <a href="${
-            "/view-single-user/" + item.token
-          }" target="_blank"> <h5>Email - ${item.email}</h5></a>
-          
+        <div class="row user-box">
+          <div class="col-10">
+            <a href="${
+              "/view-single-user/" + item.token
+            }" target="_blank"> <h5>Email - ${item.email}</h5></a>  
+            </div>
+            <div class="col-2">
+              <svg  class="del-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+  <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+</svg>
+              </div>
         </div>
         `;
         return HTML;
