--- a/views/admin/viewAllUsersPage.ejs
+++ b/views/admin/viewAllUsersPage.ejs
@@ -94,6 +94,7 @@ transform: scale(1.2);
     const token = "<%-userData.sub%>";
     const users_container = document.getElementById("users_container");
     const api_getAll_users = `https://urls4.herokuapp.com/api/v1/getAllusers`;
+    const api_del_users = `https://urls4.herokuapp.com/api/v1/delUser`;
 
     const showAllUsers = async () => {
       const urls = await getAllUsers();
@@ -105,8 +106,8 @@ transform: scale(1.2);
               "/view-single-user/" + item.token
             }" target="_blank"> <h5>Email - ${item.email}</h5></a>  
             </div>
-            <div class="col-2">
-              <svg  class="del-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+            <div class="col-2" onclick=deleteUser(${item.token})>
+              <svg  class="del-icon"  xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
   <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
 </svg>
               </div>
@@ -126,6 +127,20 @@ transform: scale(1.2);
       console.log(resp_json);
       return resp_json;
     };
+
+const deleteUser=async(token)=>{
+  console.log('hii');
+  const resp = await fetch(api_del_users + `/${token}`, {
+        method: "GET",
+        headers: { "Content-type": "application/json; charset=UTF-8" },
+      });
+      const resp_json = await resp.json();
+      console.log(resp_json);
+      return true;
+  }
+
+
+
     showAllUsers();
   </script>
 </html>
